--- a/01_dq-etl.ipynb
+++ b/01_dq-etl.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AWS Glue DQ"
+    "## AWS Glue DQ\n",
+    "\n",
+    "This notebook creates a table in Redshift, along with an AWS Glue ETL job that includes data quality checks and anomaly detection."
    ]
   },
   {
