--- a/02_dq-etl with correction.ipynb
+++ b/02_dq-etl with correction.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AWS Glue DQ"
+    "## AWS Glue DQ\n",
+    "\n",
+    "This notebook builds on the previous one and creates a new AWS Glue ETL job that includes LLM auto-correction."
    ]
   },
   {
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -940,14 +942,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job run ID: jr_187d814e96cdeedec7f735217fa60019cfce1754d0e813056a1265114d5b03b2\n"
+      "Job run ID: jr_a82e2df9e322b75a57e58066a4ee798755e759fd22ed526195cc3ad0c2b39da0\n"
      ]
     }
    ],
@@ -971,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -983,8 +985,7 @@
       "Job status: RUNNING (attempt 3/30)\n",
       "Job status: RUNNING (attempt 4/30)\n",
       "Job status: RUNNING (attempt 5/30)\n",
-      "Job status: RUNNING (attempt 6/30)\n",
-      "Job status: SUCCEEDED (attempt 7/30)\n",
+      "Job status: SUCCEEDED (attempt 6/30)\n",
       "Final job status: SUCCEEDED\n"
      ]
     }
@@ -997,16 +998,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [id, timestamp, name, version]\n",
-      "Index: []\n"
+      "   id      timestamp           name  version\n",
+      "0   3  1683849720000     Mike Brown        1\n",
+      "1   4  1683849780000    Emily Davis        1\n",
+      "2   5  1683849840000  Robert Wilson        1\n",
+      "3   1  1683849600000     John Smith        1\n",
+      "4   2  1683849660000  Sarah Johnson        1\n"
      ]
     }
    ],
