--- a/03_create_custom_reusable_visual_transform.ipynb
+++ b/03_create_custom_reusable_visual_transform.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Custom Reusable Visual Transform for AWS Glue Studio"
+    "## Custom Reusable Visual Transform for AWS Glue Studio\n",
+    "\n",
+    "This notebook creates a custom reusable visual transform that can be used in Glue Studio to fix data quality issues with the help of an LLM.\n"
    ]
   },
   {
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
