--- a/04_dq-llm-etl.ipynb
+++ b/04_dq-llm-etl.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## AWS Glue DQ"
+    "## AWS Glue DQ\n",
+    "\n",
+    "This notebook evaluates different prompt engineering techniques for LLM-based data quality checks.\n"
    ]
   },
   {
